--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -2,10 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Pet Clinic Index</title>
+    <title>Index Page</title>
 </head>
 <body>
+<!--/*@thymesVar id="vet" type="nel.hardu.hnpetclinic.model.Vet"*/-->
     <h1 th:text="'Index Page'">Index Page</h1>
+
 
 </body>
 </html>
