--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -20,7 +20,7 @@
     </thead>
 
     <tbody>
-    <tr th:each="owner : ${owners}">
+    <tr th:each="owner : ${ownerssss}">
         <td th:text="${owner.id}"></td>
         <td th:text="${owner.firstName}"></td>
         <td th:text="${owner.lastName}"></td>
